--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-bleach==3.1.0
-certifi==2019.9.11
-chardet==3.0.4
-Django==2.2.3
-django-markdown-deux==1.0.5
-django-markdownify==0.8.0
-docker==4.1.0
-idna==2.8
-Markdown==3.1.1
-markdown2==2.3.8
-Pillow==5.4.1
-pytz==2019.3
-requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
-urllib3==1.25.6
-webencodings==0.5.1
-websocket-client==0.56.0
+asgiref==3.5.2
+Django==4.0.6
+Pillow==9.2.0
+sqlparse==0.4.2
