Add .DS_store to .gitignore for macOS

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,6 @@ venv.bak/
 pip-selfcheck.json
 
 # End of https://www.gitignore.io/api/python,django,virtualenv,pycharm+all
+
+# macOS
+.DS_store
